# lab_code

./: plot.py
followInCirclePkg/: package.xml  setup.cfg  setup.py
followInCirclePkg/followInCirclePkg/: followInCircle.py  follower.py  follower2.py  tools.py
lidar_to_global/: package.xml  setup.cfg  setup.py
lidar_to_global/launch/: lidar.launch.py
lidar_to_global/lidar_to_global/: lidar2MM.py  plot_path.py  scan_reader_func.py  tools.py
mapping/: README.md  instructions.txt  package.xml  setup.py
mapping/launch/: mapping.launch.py
mapping/mapping/: Mapping.py  fullMultiMapping.py  fullMultiMappingImg.py  fullMultiMappingStrCal.py  generateFPL.py  getData.py  multiMapping.py  network_functions.py
marvelmind_ros2/: CMakeLists.txt
marvelmind_ros2/config/: marvelmind_ros2_config.yaml
turtlebot4_mekf/: package.xml  setup.cfg  setup.py
turtlebot4_mekf/config/: marvelmind_ros2_config.yaml  turtlebot4_mekf_config.yaml
turtlebot4_mekf/launch/: turtlebot4_mekf.launch.py
turtlebot4_mekf/turtlebot4_mekf/: Turtlebot2EKF.py  Turtlebot4EKF_V2.py  Turtlebot4MEKF.py  Turtlebot4MEKFwithManyComments.py  bernoulli_EKF.py  fake_beacon.py  fake_imu.py  kalman2.py  lidar2MM.py  newMEKF.py  plot_path.py  scan_reader_func.py  util.py
